add jupyter file that has the code for cleaning-data.csv

--- a/Etape 3 candidature classe Data-Mini Projet.ipynb
+++ b/Etape 3 candidature classe Data-Mini Projet.ipynb
@@ -2,8 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 227,
    "id": "d3ad52b3-d1de-404e-bcb3-71dc1de99871",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Pays           Age            Genre Dépenses des clients\n",
+      "0              France             32          Female               150.50\n",
+      "1             Germany             45            Male               200.75\n",
+      "2               Spain             28          Female                75.25\n",
+      "3               Italy             39            Male               180.00\n",
+      "4                  UK             52          Female               250.30\n",
+      "5              France             22            Male                90.00\n",
+      "6             Germany             36          Female               175.50\n",
+      "7               Spain             41            Male               120.75\n",
+      "8               Italy             29          Female                95.25\n",
+      "9                  UK             48            Male               220.00\n",
+      "10             France             35          Female               160.25\n",
+      "11            Germany             27            Male                85.50\n",
+      "12              Spain             50          Female               190.75\n",
+      "13              Italy             33            Male               140.00\n",
+      "14                 UK             44          Female               210.50\n",
+      "15             France             31            Male               130.25\n",
+      "16            Germany             38          Female               170.00\n",
+      "17              Spain             26            Male                 5.75\n",
+      "18              Italy             47          Female               200.25\n",
+      "19                 UK             30            Male               110.50\n",
+      "20             France             42             NaN               180.75\n",
+      "21            Germany             29            Male               100.25\n",
+      "22              Spain             55          Female               230.00\n",
+      "23              Italy             36            Male               150.75\n",
+      "24                 UK             25          Female                80.50\n",
+      "25             France             49            Male               215.25\n",
+      "26            Germany             34          Female               145.00\n",
+      "27              Spain             40            Male               175.50\n",
+      "28              Italy             23          Female                70.25\n",
+      "29                 UK             51            Male               240.75\n",
+      "30             France             37          Female               165.00\n",
+      "31            Germany             43            Male               195.25\n",
+      "32              Spain             28          Female                85.75\n",
+      "33              Italy             46            Male               205.50\n",
+      "34                 UK             33          Female               135.25\n",
+      "35             France             30            Male               120.00\n",
+      "36            Germany             52          Female               225.75\n",
+      "37              Spain             35            Male               155.50\n",
+      "38              Italy             27          Female                90.25\n",
+      "39                 UK             48            Male               210.00\n",
+      "40             France             39          Female               170.25\n",
+      "41            Germany             31            Male               125.75\n",
+      "42              Spain             44          Female               190.00\n",
+      "43              Italy             25            Male                75.50\n",
+      "44                 UK             50          Female               220.25\n",
+      "45             France            NaN            Male               160.75\n",
+      "46            Germany             41          Female               185.00\n",
+      "47              Spain             29            Male               105.25\n",
+      "48              Italy             53          Female               235.50\n",
+      "49                 UK             32            Male               140.25\n",
+      "50                USA             28          Female               180.00\n",
+      "51             Canada             45            Male                  NaN\n",
+      "52          Australia             39          Female               210.50\n",
+      "53              Japan             33            Male               145.75\n",
+      "54             Brazil             47          Female               195.25\n",
+      "55               Mars           -100           Alien            999999.99\n",
+      "56               Moon            150           Lunar                 0.01\n",
+      "57           Atlantis           1000       Merperson               500.00\n",
+      "58           Hogwarts             11          Wizard         100 Galleons\n",
+      "59             Narnia              0  Talking Animal  50 Turkish Delights\n",
+      "60      Digital Realm            NaN              AI           1010101.01\n",
+      "61         Multiverse              ∞      Non-Binary                    π\n",
+      "62              Error        #VALUE!             404              #DIV/0!\n",
+      "63      Greece, Italy          25;30     Male;Female              100+200\n",
+      "64   United  Kingdom   Not Available           Other            Priceless\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Lire les données du fichier CSV ‘dataset-sell4all.csv’ qui contient les données\n",
+    "### démographiques et de dépenses des utilisateurs\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
+    "print(df.to_string())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "59d7f96a-3aab-49f7-8648-3c7d1926d20b",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -26,6 +120,8 @@
     }
    ],
    "source": [
+    "### Afficher des informations sur les 5 premières lignes du fichier CSV\n",
+    "\n",
     "import pandas as pd\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
     "print(df.head().to_string())\n"
@@ -62,6 +158,12 @@
     }
    ],
    "source": [
+    "### Afficher un résumé technique des données disponibles dans le fichier CSV avec des\n",
+    "### informations telles que :\n",
+    "##### nombre de lignes\n",
+    "##### les colonnes du fichier CSV\n",
+    "##### les types de données des champs du fichier CSV\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
@@ -74,16 +176,24 @@
    "id": "89bddca7-a990-4923-b9c2-d53d5016d27e",
    "metadata": {},
    "source": [
-    "nombre de lignes: 65\n",
-    "les colonnes du fichier CSV: 4 colonnes = [Pays, Age, Genre, Dépenses des clients]\n",
-    "les types de données des champs du fichier CSV: object"
+    " Expliquer les détails affichés du résumé technique dans une cellule de démarque du\n",
+    " bloc-notes Jupyter\n",
+    "\n",
+    "# nombre de lignes: 65\n",
+    "# les colonnes du fichier CSV: 4 colonnes = [Pays, Age, Genre, Dépenses des clients]\n",
+    "# les types de données des champs du fichier CSV: object"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 148,
    "id": "6d6607f2-2f8e-4fd0-9fcf-bc76316f1384",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -95,6 +205,10 @@
     }
    ],
    "source": [
+    "### Calculer la médiane et la moyenne des colonnes :\n",
+    "### « Âge »\n",
+    "### « Dépenses des clients »\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
@@ -153,6 +267,9 @@
     }
    ],
    "source": [
+    "### Créer une visualisation des données du graphique à barres qui montre les dépenses\n",
+    "### des clients par pays\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -200,6 +317,10 @@
    "execution_count": 208,
    "id": "0bf9e81a-1530-434c-ac3f-5831c958f079",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -264,6 +385,9 @@
     }
    ],
    "source": [
+    "### Nettoyer les lignes avec moins de 10 € de dépenses client : supprimez toutes les\n",
+    "### lignes d’utilisateurs ayant dépensé moins de 10 € sur le site\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
@@ -297,6 +421,10 @@
    "execution_count": 222,
    "id": "e7246080-2bd7-48c1-86f0-ed01b71232ac",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
@@ -360,6 +488,9 @@
     }
    ],
    "source": [
+    "### Nettoyer les doublons : supprimer toutes les lignes qui apparaissent plus d’une fois\n",
+    "### dans les données\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
@@ -400,6 +531,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Écrire les données nettoyées dans un nouveau fichier CSV avec uniquement les\n",
+    "### colonnes suivantes :\n",
+    "##### « Pays »\n",
+    "##### « Âge »\n",
+    "##### « Genre »\n",
+    "#####« Dépenses des clients »\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/data-sell4all.csv')\n",
@@ -519,7 +657,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('Downloads/cleaning-data.csv')\n",
-    "#print(df.to_string())\n",
+    "print(df.to_string())\n",
     "#print(df.info())"
    ]
   },
